--- a/PrimerHTML.html
+++ b/PrimerHTML.html
@@ -3,12 +3,12 @@
 
 <head>
 
-<h1><b> T&iacute;tulo principal de la practica HTML</b> </h1>
+<h1><b> Título principal de la practica HTML</b> </h1>
 <p>Estamos aprendiendo HTML y necesitamos practicar para que se nos fije el conocimiento,
      en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos 
      los distintos HTML que podemos encontrar</p>
 
-<h2> Primero HTML sem&aacute;ntico</h2>
+<h2> Primero HTML semántico</h2>
 <p>HTML Semántico es el uso de las etiquetas HTML para reforzar la 
     semántica, o el significado, de la información en las páginas web 
     más que simplemente redefinir su forma de presentación (apariencia). El HTML semántico es procesado por los navegadores web regulares así 
